[gd_scene load_steps=29 format=2]

[ext_resource path="res://Art/Walk.png" type="Texture" id=1]
[ext_resource path="res://Art/Resting.png" type="Texture" id=2]
[ext_resource path="res://Art/Dig.png" type="Texture" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://Art/DigDown.png" type="Texture" id=5]
[ext_resource path="res://Art/walk.wav" type="AudioStream" id=6]
[ext_resource path="res://Art/light.png" type="Texture" id=7]
[ext_resource path="res://Art/jump.wav" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Resting",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "DigDown",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Dig",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=19]
radius = 15.0
height = 25.0

[sub_resource type="CircleShape2D" id=20]
radius = 18.6573

[node name="Player" type="RigidBody2D" groups=[
"bodies",
]]
mode = 2
mass = 500.0
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 0
frames = SubResource( 18 )
animation = "DigDown"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.25 )
shape = SubResource( 19 )

[node name="JumpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
position = Vector2( 0, 25.6473 )
shape = SubResource( 20 )

[node name="MiningArea" type="Position2D" parent="."]
position = Vector2( 25, 17.659 )

[node name="MiningAreaDown" type="Position2D" parent="."]
position = Vector2( -0.0966415, 33.0167 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 9, 15 )
texture = ExtResource( 7 )
color = Color( 0.964706, 0.882353, 0.662745, 1 )
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.709804 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
